--- a/OnlineStoreOfBoardGames/Views/Shared/_Layout.cshtml
+++ b/OnlineStoreOfBoardGames/Views/Shared/_Layout.cshtml
@@ -4,18 +4,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     @RenderSection("Title", false)
-    <title>@ViewData["Title"] - PortalAboutEverything</title>
+    <title>@ViewData["Title"] - OnlineStoreOfBoardGames</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/alert.css" />
-    <link rel="stylesheet" href="~/PortalAboutEverything.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/OnlineStoreOfBoardGames.styles.css" asp-append-version="true" />
     @RenderSection("Style", false)
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">PortalAboutEverything</a>
+                <a class="navbar-brand" href="/BoardGame/Index">OnlineStoreOfBoardGames</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
