--- a/OnlineStoreOfBoardGames/Views/Alert/Index.cshtml
+++ b/OnlineStoreOfBoardGames/Views/Alert/Index.cshtml
@@ -1,15 +1,19 @@
 ﻿@model List<OnlineStoreOfBoardGames.Models.Alert.AlertIndexViewModel>
 
-<h1>
-    Alert
-</h1>
-<div>
+@section Style {
+    <link href="/css/Alerts/index.css?v=1" rel="stylesheet" />
+}
+
+<h1>Alerts</h1>
+
+<div class="create-alert">
     <a href="/Alert/Create">Create Alert</a>
 </div>
+
 <div>
     @foreach (var alert in Model)
     {
-        <div>
+        <div class="alert-item">
             <div class="date">@alert.EndDate</div>
             <div>
                 @alert.Text
