--- a/OnlineStoreOfBoardGames/Views/Shared/_Layout.cshtml
+++ b/OnlineStoreOfBoardGames/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/alert.css" />
     <link rel="stylesheet" href="~/OnlineStoreOfBoardGames.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/layout.css" />
     @RenderSection("Style", false)
 </head>
 <body>
