--- a/OnlineStoreOfBoardGames/Views/Auth/AccessDenied.cshtml
+++ b/OnlineStoreOfBoardGames/Views/Auth/AccessDenied.cshtml
@@ -1,3 +1,7 @@
-﻿<div>
+﻿@section Style {
+    <link href="/css/Auth/accessDenied.css?v=1" rel="stylesheet" />
+}
+
+<div class="error-page">
     Мы поняли кто ты. Тебе туда нельзя
 </div>
