--- a/OnlineStoreOfBoardGames/Views/Alert/Index.cshtml
+++ b/OnlineStoreOfBoardGames/Views/Alert/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<OnlineStoreOfBoardGames.Models.Alert.AlertIndexViewModel>
+﻿@model OnlineStoreOfBoardGames.Models.Alert.AlertsIndexViewModel
 
 @section Style {
     <link href="/css/Alerts/index.css?v=1" rel="stylesheet" />
@@ -6,21 +6,27 @@
 
 <h1>Alerts</h1>
 
-<div class="create-alert">
-    <a href="/Alert/Create">Create Alert</a>
-</div>
+@if (Model.CanCreateAndDelete)
+{
+    <div class="create-alert">
+        <a href="/Alert/Create">Create Alert</a>
+    </div>
+}
 
 <div>
-    @foreach (var alert in Model)
+    @foreach (var alert in Model.Alerts)
     {
         <div class="alert-item">
             <div class="date">@alert.EndDate</div>
             <div>
                 @alert.Text
             </div>
-            <div>
-                <a href="/alert/delete?id=@alert.Id">delete</a>
-            </div>
+            @if (Model.CanCreateAndDelete)
+            {
+                <div>
+                    <a href="/alert/delete?id=@alert.Id">delete</a>
+                </div>
+            }
         </div>
     }
 </div>
