--- a/OnlineStoreOfBoardGames/Views/BoardGame/UserFavoriteBoardGames.cshtml
+++ b/OnlineStoreOfBoardGames/Views/BoardGame/UserFavoriteBoardGames.cshtml
@@ -29,7 +29,7 @@
                     <th>
                         <div class="vk-share">
                             <span></span>
-                            <button class="highlighted-button">@BoardGame_UserFavoritesGame.Share</button>
+                            @* <button class="highlighted-button">@BoardGame_UserFavoritesGame.Share</button> *@
                         </div>
                     </th>
                 </tr>
@@ -49,7 +49,7 @@
                             <div class="delete-and-add">
                                 <span></span>
                                 <a class="delete-link">x</a>
-                                <button class="highlighted-button card-button">@BoardGame_UserFavoritesGame.AddToCart</button>
+                                @* <button class="highlighted-button card-button">@BoardGame_UserFavoritesGame.AddToCart</button> *@
                             </div>
                         </td>
                     </tr>
