--- a/OnlineStoreOfBoardGames/wwwroot/css/BoardGame/style.css
+++ b/OnlineStoreOfBoardGames/wwwroot/css/BoardGame/style.css
@@ -109,6 +109,7 @@ button {
 .price-card .buttons button {
     height: 40px;
     font-size: 20px;
+    margin-top: 35px;
 }
 
 .highlighted-button {
