Fixed class name

--- a/OnlineStoreOfBoardGames/Views/BoardGame/BoardGame.cshtml
+++ b/OnlineStoreOfBoardGames/Views/BoardGame/BoardGame.cshtml
@@ -116,7 +116,7 @@
                     else
                     {
                         <input type="hidden" class="is-add" value="1" />
-                        <button class="highlighted-buttonn favorite-button">@BoardGame_GamePage.AddToFavorites</button>
+                        <button class="highlighted-button favorite-button">@BoardGame_GamePage.AddToFavorites</button>
                     }
                 </div>
             </div>
